bk_ida/gccida/c1/replace_call_placeholder
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/sibcall.c:1006:13: error: use of undeclared identifier 'sibcall_use_normal_0'; did you mean 'sibcall_use_normal'?
if ( use == sibcall_use_normal_0 ) 
            ^~~~~~~~~~~~~~~~~~~~
            sibcall_use_normal
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/rtl.h:2107:3: note: 'sibcall_use_normal' declared here
  sibcall_use_normal = 1,
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/sibcall.c:1010:18: error: use of undeclared identifier 'sibcall_use_sibcall_0'; did you mean 'sibcall_use_sibcall'?
else if ( use == sibcall_use_sibcall_0 ) 
                 ^~~~~~~~~~~~~~~~~~~~~
                 sibcall_use_sibcall
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/rtl.h:2109:3: note: 'sibcall_use_sibcall' declared here
  sibcall_use_sibcall
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/sibcall.c:1016:13: error: use of undeclared identifier 'sibcall_use_tail_recursion_0'; did you mean 'sibcall_use_tail_recursion'?
if ( use != sibcall_use_tail_recursion_0 ) 
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
            sibcall_use_tail_recursion
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/rtl.h:2108:3: note: 'sibcall_use_tail_recursion' declared here
  sibcall_use_tail_recursion,
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_call_placeholder/src/obj/sibcall.o] Error 1
